--- a/boid_final_project/boid_final_project.vcxproj
+++ b/boid_final_project/boid_final_project.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="boid.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="preprocessor.h" />
+    <ClInclude Include="single_node.h" />
     <ClInclude Include="spatial_grid.h" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +168,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="single_node.cpp" />
     <ClCompile Include="spatial_grid.cpp" />
   </ItemGroup>
   <ItemGroup>
