--- a/boid_final_project/boid_final_project.vcxproj.filters
+++ b/boid_final_project/boid_final_project.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="spatial_grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="single_node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="spatial_grid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="single_node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
