--- a/boid_final_project/boid_final_project.vcxproj
+++ b/boid_final_project/boid_final_project.vcxproj
@@ -144,6 +144,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -154,14 +155,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="boid.h" />
+    <ClInclude Include="communication.h" />
+    <ClInclude Include="master.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="preprocessor.h" />
     <ClInclude Include="single_node.h" />
     <ClInclude Include="spatial_grid.h" />
+    <ClInclude Include="worker.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="boid.cpp" />
     <ClCompile Include="boid_final_project.cpp" />
+    <ClCompile Include="communication.cpp" />
+    <ClCompile Include="master.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -170,6 +176,7 @@
     </ClCompile>
     <ClCompile Include="single_node.cpp" />
     <ClCompile Include="spatial_grid.cpp" />
+    <ClCompile Include="worker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
